--- a/case_study/master.css
+++ b/case_study/master.css
@@ -17,6 +17,9 @@
         url(fonts/roboto-bold-webfont.woff2) format("woff2");
 }
 
+strong {
+    font-family: "roboto_bold";
+}
 
 body {
     max-width: 1000px;
@@ -27,11 +30,23 @@ body {
 div {
     text-align: left;
     margin: auto 3rem;
-    padding: 1rem 6rem;
+    padding: 1rem 3rem;
     width: auto;
     font-family: 'roboto_regular';
     color: black;
     background: lightgray;
+    border-radius: 10px;
+
+}
+
+.container {
+    position: relative;
+}
+
+.footText {
+    position: absolute;
+    bottom: -18px;
+    right: 54px;
 }
 
 div h1,
@@ -42,10 +57,25 @@ img {
 
 .resize {
     width: 100%;
+
+
 }
 
 h3,
 h4 {
     font-family: "roboto_bold";
 
+}
+
+ul li {
+    margin-bottom: .5rem;
+}
+
+a button {
+    width: 100%;
+    height: 50px;
+    border-radius: 50px;
+    font-size: 20px;
+    cursor: pointer;
+    box-shadow: 1px;
 }
