--- a/case_study/master.css
+++ b/case_study/master.css
@@ -24,7 +24,7 @@ strong {
 body {
     max-width: 1000px;
     margin: auto;
-    background: white;
+    background: black;
 }
 
 div {
@@ -33,8 +33,7 @@ div {
     padding: 1rem 3rem;
     width: auto;
     font-family: 'roboto_regular';
-    color: black;
-    background: lightgray;
+    color: whitesmoke;
     border-radius: 10px;
 
 }
@@ -61,6 +60,7 @@ img {
 
 }
 
+h2,
 h3,
 h4 {
     font-family: "roboto_bold";
